--- a/index.html
+++ b/index.html
@@ -190,6 +190,23 @@
     <h2>Daily Projects</h2>
     <p>The log of my daily work. Newest projects appear first.</p>
 
+    <div class="project-entry">
+      <h3>Day 2: Coming Soon</h3>
+      <p class="project-date">July 1, 2025</p>
+      <div style="height:180px; display:flex; align-items:center; justify-content:center; background:#f9f9f9; border:1px dashed #ccc; margin:20px 0;">
+        <span style="color:#aaa; font-size:22px;">Stay tuned for tomorrow's project!</span>
+      </div>
+      <p>
+        Project details will be posted soon.
+      </p>
+      <p>
+        <b>Tech:</b> TBA<br>
+        <b>Links:</b> <a>Coming soon</a>
+      </p>
+    </div>
+    
+    <hr style="width: 50%; background-color: #eee; margin: 40px auto;">
+
     <!-- Project Entry Template -->
     <div class="project-entry">
       <h3>Day 1: Simple Metronome App</h3>
