--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - A Project a Day</title>
+  <title>Matthias Petry - A Project a Day</title>
   <style>
     /* Base styles inspired by tinygrad.org */
     body {
