--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
     <p>The log of my daily work. Newest projects appear first.</p>
 
     <div class="project-entry">
-      <h3>Day 2: Coming Soon</h3>
-      <p class="project-date">July 1, 2025</p>
+      <h3>Day 3: Coming Soon</h3>
+      <p class="project-date">July 2, 2025</p>
       <div style="height:180px; display:flex; align-items:center; justify-content:center; background:#f9f9f9; border:1px dashed #ccc; margin:20px 0;">
         <span style="color:#aaa; font-size:22px;">Stay tuned for tomorrow's project!</span>
       </div>
@@ -201,6 +201,24 @@
       </p>
       <p>
         <b>Tech:</b> TBA<br>
+        <b>Links:</b> <a>Coming soon</a>
+      </p>
+    </div>
+
+    <hr style="width: 50%; background-color: #eee; margin: 40px auto;">
+
+    <div class="project-entry">
+      <h3>Day 2: SumItUp - AI-Powered Text Summarizer</h3>
+      <p class="project-date">July 1, 2025</p>
+      <video class="project-image" style="max-width: 500px; display: block; margin: 20px auto;" controls autoplay muted loop>
+          <source src="assets/sumitup.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      <p>
+        A Chrome extension that pulls text from any website and uses an LLM to generate a concise summary. It supports a "Bring Your Own Key" (BYOK) model via OpenRouter, giving users control over their API usage. Perfect for quickly digesting long articles and reports.
+      </p>
+      <p>
+        <b>Tech:</b> JavaScript, OpenRouter API, BYOK<br>
         <b>Links:</b> <a>Coming soon</a>
       </p>
     </div>
@@ -221,7 +239,7 @@
         A straightforward metronome app. I was frustrated with the metronome apps on the App Store—most were cluttered or tried to upsell unnecessary features. So I built my own, focused on simplicity and ease of use.
       </p>
       <p>
-        <b>Tech:</b>Swift<br>
+        <b>Tech:</b> Swift<br>
         <b>Links:</b> <a>Coming soon</a> 
       </p>
     </div>
