--- a/index.html
+++ b/index.html
@@ -159,6 +159,37 @@
     .small-image {
       max-width: 30.5%; /* or any size you want */
     }
+
+    /* --- Responsive Styles for Mobile --- */
+    @media (max-width: 600px) {
+      body {
+        padding: 0 20px;
+        font-size: 16px;
+      }
+      h2 {
+        font-size: 24px;
+      }
+      h3 {
+        font-size: 20px;
+      }
+      .terminal-header {
+        padding: 20px;
+        font-size: 16px;
+        margin: 30px 0;
+      }
+      .links-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .links-container a {
+        margin: 8px 0;
+        border-bottom: 1px dotted #111;
+      }
+      .separator {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -204,7 +235,7 @@
     <div class="project-entry">
       <h3>Day 2: SumItUp - AI-Powered Text Summarizer</h3>
       <p class="project-date">July 1, 2025</p>
-      <video class="project-image" style="max-width: 500px; display: block; margin: 20px auto;" controls autoplay muted loop>
+      <video class="project-image" controls autoplay muted loop>
           <source src="assets/sumitup.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
