--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     <p>The log of my daily work. Newest projects appear first.</p>
 
     <div class="project-entry">
-      <h3>Day 3: Coming Soon</h3>
-      <p class="project-date">July 2, 2025</p>
+      <h3>Day 4: Coming Soon</h3>
+      <p class="project-date">July 3, 2025</p>
       <div style="height:180px; display:flex; align-items:center; justify-content:center; background:#f9f9f9; border:1px dashed #ccc; margin:20px 0;">
         <span style="color:#aaa; font-size:22px;">Stay tuned for tomorrow's project!</span>
       </div>
@@ -226,6 +226,24 @@
       </p>
       <p>
         <b>Tech:</b> TBA<br>
+        <b>Links:</b> <a>Coming soon</a>
+      </p>
+    </div>
+
+    <hr style="width: 50%; background-color: #eee; margin: 40px auto;">
+
+    <div class="project-entry">
+      <h3>Day 3: MazeFlow MPC</h3>
+      <p class="project-date">July 2, 2025</p>
+      <video class="project-image" controls autoplay muted loop>
+          <source src="assets/MazeFlow.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      <p>
+        Today's build: MazeFlow MPC - An AI agent that learns to navigate complex mazes. It uses a Flow Matching model to generate optimal paths and MPC to re-plan its entire route from every single step.
+      </p>
+      <p>
+        <b>Tech:</b> Python, PyTorch, AI<br>
         <b>Links:</b> <a>Coming soon</a>
       </p>
     </div>
