--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <div class="project-entry">
       <h3>Day 3: MazeFlow MPC</h3>
       <p class="project-date">July 2, 2025</p>
-      <video class="project-image" controls autoplay muted loop>
+      <video class="project-image" controls autoplay muted loop style="max-width: 500px;">
           <source src="assets/MazeFlow.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
