--- a/index.html
+++ b/index.html
@@ -216,16 +216,34 @@
     <p>The log of my daily work. Newest projects appear first.</p>
 
     <div class="project-entry">
-      <h3>Day 4: Coming Soon</h3>
-      <p class="project-date">July 3, 2025</p>
+      <h3>Day 5: Coming Soon</h3>
+      <p class="project-date">July 4, 2025</p>
       <div style="height:180px; display:flex; align-items:center; justify-content:center; background:#f9f9f9; border:1px dashed #ccc; margin:20px 0;">
-        <span style="color:#aaa; font-size:22px;">Stay tuned for tomorrow's project!</span>
+        <span style="color:#aaa; font-size:22px;">Stay tuned for tomorrow\'s project!</span>
       </div>
       <p>
         Project details will be posted soon.
       </p>
       <p>
         <b>Tech:</b> TBA<br>
+        <b>Links:</b> <a>Coming soon</a>
+      </p>
+    </div>
+
+    <hr style="width: 50%; background-color: #eee; margin: 40px auto;">
+
+    <div class="project-entry">
+      <h3>Day 4: Synesthesia AI - Visuals to Music</h3>
+      <p class="project-date">July 3, 2025</p>
+      <video class="project-image" controls autoplay muted loop style="max-width: 500px;">
+          <source src="assets/synthdemo2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      <p>
+        Synesthesia AI takes an image or video to generate music based on the visual content. A CLIP model was trained on Unsplash images to predict a chord from the visuals.
+      </p>
+      <p>
+        <b>Tech:</b> Python, Streamlit, PyTorch, AI<br>
         <b>Links:</b> <a>Coming soon</a>
       </p>
     </div>
